RESOLVED FIXED230618
WebGL first clear is lost when scissor is used for preserveDrawingBuffer:true in some conditions
https://bugs.webkit.org/show_bug.cgi?id=230618
Summary WebGL first clear is lost when scissor is used for preserveDrawingBuffer:true...
Kimmo Kinnunen
Reported 2021-09-22 06:12:41 PDT
WebGL first clear is lost when scissor is used for preserveDrawingBuffer:true in some conditions Possibly c.enable(c.SCISSOR_TEST); c.clearColor(0., 1., 0., 0.5); c.scissor(0, 0, 300, 50); c.clear(c.COLOR_BUFFER_BIT); c.scissor(125, 50, 50, 50); c.clearColor(0., 1., 0., 1.); c.clear(c.COLOR_BUFFER_BIT); c.scissor(0, 0, 300, 50); c.clear(c.COLOR_BUFFER_BIT);
Attachments
Patch (4.61 KB, patch)
2021-10-01 06:49 PDT, Kimmo Kinnunen
no flags
Patch (4.69 KB, patch)
2021-10-01 06:54 PDT, Kimmo Kinnunen
no flags
Patch for landing (5.12 KB, patch)
2021-10-02 10:59 PDT, Kimmo Kinnunen
no flags
Kenneth Russell
Comment 1 2021-09-22 17:03:04 PDT
Great find - let's try to write a conformance test for this once it's understood.
Radar WebKit Bug Importer
Comment 2 2021-09-29 06:13:13 PDT
Kimmo Kinnunen
Comment 3 2021-10-01 06:49:18 PDT
Kimmo Kinnunen
Comment 4 2021-10-01 06:54:56 PDT
Dean Jackson
Comment 5 2021-10-01 13:29:26 PDT
Comment on attachment 439852 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=439852&action=review > LayoutTests/ChangeLog:9 > + done-scissor ?
Kimmo Kinnunen
Comment 6 2021-10-02 10:59:38 PDT
Created attachment 439969 [details] Patch for landing
Kenneth Russell
Comment 7 2021-10-04 16:27:07 PDT
I defer to Dean's review, but have filed: Add test for scissor affecting compositing https://github.com/KhronosGroup/WebGL/issues/3337 to make sure this doesn't get lost, and is handled properly in other browsers.
EWS
Comment 8 2021-10-12 05:36:18 PDT
Committed r283979 (242825@main): <https://commits.webkit.org/242825@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439969 [details].
Note You need to log in before you can comment on or make changes to this bug.